--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
   <body>
     <div class="count">
       0
-
     </div>
     <div class="math">
-      click/tap
-
-
+      click/tap to start
     </div>
     <div class="answer">
-      click/tap
-
-
+      answers will be here
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="math.js">
 
