--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
       click/tap to start
     </div>
     <div class="answer">
-      
+
+    </div>
+
+    <div class="go">
+      <button type="button" name="Go"></button>
+    </div>
+
+    <div class="delay">
+      <input type="range" min="0" max="8" value="3" step="1">
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
