--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Math</title>
     <link rel="stylesheet" href="math.css">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div class="count">
@@ -17,11 +24,19 @@
     </div>
 
     <div class="go">
-      <button type="button" name="Go"></button>
+      <button type="button" class="w-80 btn btn-lg btn-primary" name="">Go</button>
     </div>
 
     <div class="delay">
-      <input type="range" min="0" max="8" value="3" step="1">
+      <input type="range" id=delay min="2" max="6" value="3" step="1" list="tickmarks">
+
+      <datalist id="tickmarks">
+        <option value="2" label="2"></option>
+        <option value="3" label="3"></option>
+        <option value="4" label="4"></option>
+        <option value="5" label="5"></option>
+        <option value="6" label="6"></option>
+      </datalist>
 
     </div>
 
