--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="go">
-      <button type="button" class="w-80 btn btn-lg btn-primary" name="">Go</button>
+      <button type="button" class="w-80 btn btn-lg btn-primary go-button" name="">Go</button>
     </div>
 
     <div class="delay">
