up size go button

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
       0
     </div>
     <div class="math">
-      click/tap to start
+      click/tap Go
     </div>
     <div class="answer">
-
+      to start
     </div>
 
     <div class="go">
-      <button type="button" class="w-80 btn btn-lg btn-primary go-button" name="">Go</button>
+      <button type="button" class="go-button" name="">Go</button>
+      <!-- bootstrap classes: w-80 btn btn-lg btn-primary  -->
+
     </div>
 
     <div class="delay">
