--- a/index.html
+++ b/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Math</title>
-    <link rel="stylesheet" href="math.css">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <title>Math</title>
+  <link rel="stylesheet" href="math.css">
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  </head>
-  <body>
-    <div class="count">
-      0
-    </div>
-    <div class="math">
-      click/tap Go
-    </div>
-    <div class="answer">
-      to start
-    </div>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <div class="go">
-      <button type="button" class="go-button" name="">Go</button>
-      <!-- bootstrap classes: w-80 btn btn-lg btn-primary  -->
+</head>
 
-    </div>
+<body>
+  <div class="count">
+    0
+  </div>
+  <div class="math">
+    click/tap Go
+  </div>
+  <div class="answer">
+    to start
+  </div>
 
-    <div class="delay">
-      <input type="range" id=delay min="2" max="6" value="3" step="1" list="tickmarks">
+  <div class="go">
+    <button type="button" class="go-button" name="">Go</button>
+    <!-- bootstrap classes: w-80 btn btn-lg btn-primary  -->
 
-      <datalist id="tickmarks">
-        <option value="2" label="2"></option>
-        <option value="3" label="3"></option>
-        <option value="4" label="4"></option>
-        <option value="5" label="5"></option>
-        <option value="6" label="6"></option>
-      </datalist>
+  </div>
 
-    </div>
+  <div class="delay">
+    <label for="delay">answer delay in seconds</label><br>
+    <input type="range" id=delay min="2" max="6" value="3" step="1" list="tickmarks">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="math.js">
+    <datalist id="tickmarks">
+      <option value="2" label="2"></option>
+      <option value="3" label="3"></option>
+      <option value="4" label="4"></option>
+      <option value="5" label="5"></option>
+      <option value="6" label="6"></option>
+    </datalist>
 
-    </script>
-  </body>
+  </div>
+
+  <!-- <div class="delay">
+    <label for="customRange3" class="form-label">Example range</label>
+    <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+  </div> -->
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="math.js">
+
+  </script>
+</body>
+
 </html>
